--- a/Day 07 - JavaScriptNode 1/index.ipynb
+++ b/Day 07 - JavaScriptNode 1/index.ipynb
@@ -23,7 +23,7 @@
     "# Javascript 1 ~ 1/3\n",
     "\n",
     "- Getting Started\n",
-    "- NodeJS\n",
+    "- NodeJS and NPM\n",
     "- Fundamental syntax\n",
     "- Data types variables\n",
     "- Operator Expressions\n"
